src/objects/Project_Submission_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Beginning_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beginning DOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Beginning_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beginning Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COSMOS_Divisions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COSMOS Divisions</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COSMOS_Panels__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COSMOS Panels</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Project Submission Details</relationshipLabel>
        <relationshipName>Project_Submission_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Claim_Examples__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If examples are too large to include in the provided field, please add as an attachment.</inlineHelpText>
        <label>Claim Examples</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_Update__c</fullName>
        <inlineHelpText>Indicate if a system update occurred in relation to the Remediation (i.e Navigator, Phycon, Team Track).</inlineHelpText>
        <label>Configuration Update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Preference__c</fullName>
        <label>Contact Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Issue_Identified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the date the rework originator identified the issue.</inlineHelpText>
        <label>Date Issue Identified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Type__c</fullName>
        <label>Date Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Date of Service</fullName>
                </value>
                <value>
                    <fullName>Process Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_UHC_Notified_by_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Issue Type is a State Directed Update, then indicate the date UHC was notified by the state.</inlineHelpText>
        <label>Date UHC Notified by State (C&amp;S)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_Within_Reconsideration_Timeframe__c</fullName>
        <label>Dates Within Reconsideration Timeframe?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ending_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending DOS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ending_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ending Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the outcome expected by the provider that would resolve the issue.</inlineHelpText>
        <label>Expected Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a clear explanation of the reason for the project referral.  Indicate the error that occurred causing incorrect claims processing.  Include any details that do not correspond to an existing field.</inlineHelpText>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Identified_By__c</fullName>
        <label>Identified by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Source</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Other External Source</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <isActive>false</isActive>
                    <label>Internal</label>
                </value>
                <value>
                    <fullName>Provider Complaint</fullName>
                    <isActive>false</isActive>
                    <label>Provider Complaint</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <inlineHelpText>Indicate the rework originator.</inlineHelpText>
        <label>Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Provider Error</fullName>
                </value>
                <value>
                    <fullName>State Directed Update</fullName>
                </value>
                <value>
                    <fullName>UHC Error</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                    <isActive>false</isActive>
                    <label>Provider</label>
                </value>
                <value>
                    <fullName>UHC</fullName>
                    <isActive>false</isActive>
                    <label>UHC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide the ID associated with the system update.</inlineHelpText>
        <label>Referral ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remediation_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the actions taken to correct the issue. If the issue has not been corrected, indicate why.</inlineHelpText>
        <label>Remediation Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Remediated__c</fullName>
        <inlineHelpText>Indicate if the issue that caused incorrect claim payment has been identified and corrected.</inlineHelpText>
        <label>Root Cause Remediated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOBJEXT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SOBJECT REFERENCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a name or link to the associated SOP.</inlineHelpText>
        <label>Standard Operating Procedure Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOP_Update__c</fullName>
        <inlineHelpText>Indicate if an SOP update occurred in relation to the Remediation.</inlineHelpText>
        <label>Standard Operating Procedure Update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Truth_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source of Truth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_of_Truth_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If this change was not originally due to a documented request—was the error due to UHC?  Please explain why or why not.</inlineHelpText>
        <label>Source of Truth Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_of_Truth_Type__c</fullName>
        <inlineHelpText>For provider related updates if there is Source of Truth documentation (i.e. new contract, address change, provider request to term, roster, etc.) that originally prompted the changes, then please add as an attachment.</inlineHelpText>
        <label>Source of Truth Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Roster</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Process_Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicate the date the system correction or process change was put into place to allow re-adjudication of claims.</inlineHelpText>
        <label>System/Process Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timely_Reconsideration_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If the claims are outside of the Reconsideration Time Frame, provide justification for addressing the claims.</inlineHelpText>
        <label>Timely Reconsideration Details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Project Submission Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSD-{000}</displayFormat>
        <label>Project Submission Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Submission Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_More_than_one_Project_Submission</fullName>
        <active>true</active>
        <description>User must not create more than one project submission details for one case.</description>
        <errorConditionFormula>AND(
  NOT($Setup.ACETConditionalAccess__c.isSkipRESCValidation__c),
  ISNEW(), 
  Case__r.Count_of_Project_Submission__c &gt; 0
)</errorConditionFormula>
        <errorMessage>You cannot create multiple project submission details for one case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Root_Cause_Not_Remediated_Reason</fullName>
        <active>true</active>
        <description>This rule forces to provide reason for Root Cause not remediated.</description>
        <errorConditionFormula>AND(
  NOT($Setup.ACETConditionalAccess__c.isSkipRESCValidation__c),
  ISPICKVAL(Root_Cause_Remediated__c, &apos;No&apos;), 
  ISBLANK(Remediation_Details__c) 
)</errorConditionFormula>
        <errorDisplayField>Remediation_Details__c</errorDisplayField>
        <errorMessage>Please provide reason of why the root cause is not remediated.</errorMessage>
    </validationRules>
</CustomObject>